--- a/DC_Docs/index.html
+++ b/DC_Docs/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+    <!--This one is not completely finished.  Still working on the side bar and the block quote. 
+         For the most part, I found this one easier than the second example (probably because there wasn't as much to center). -->
     <head>
         <title>DigitalCrafts Docs</title>
         <link rel="stylesheet" href="style.css"/>
@@ -24,6 +26,7 @@
             </div>
                 <h5>INTRODUCTION</h5>
                 <p>DigitalCrafts docs is your go to place for anything related to DigitalCrafts: Lectures, campus info, job serach tips, personal development, bios, etc. You can scroll down to read all of this website, click on the navigation buttons on the left, or search for a specific topic using the search bar on the left. This website is a work in progress, so don't be surprised if all the text below this paragraph is gibberish.</p>
+                <!--Not sure if a blockquote is the correct/necessary tag to use but it sounded right.-->
                 <blockquote>"We should give the students some bogus assignment so that we can leave and go play laser tag down the street... wait, are you writing this down? Don't write this down!" -Adam Szaruga</blockquote>
                 <h5>MOTIVATION</h5>
                 <p>Cupcake ipsum dolor sit amet dragée liquorice sugar plum. Apple pie bear claw liquorice icing macaroon cupcake brownie jujubes wafer. Topping croissant marzipan lemon drops chupa chups tiramisu ice cream sugar plum candy. Dessert sweet liquorice jujubes toffee chocolate cake. Chocolate bar cake chocolate bar marshmallow chupa chups marzipan croissant icing. Soufflé cheesecake danish wafer donut croissant biscuit tart.
